--- a/templates/index.html
+++ b/templates/index.html
@@ -31,6 +31,6 @@
       {% endfor %}
     </div>
   {% else %}
-    <p>No manga found yet. Add some with the admin panel.</p>
+    <p>No manga found yet. Use the admin panel to add some.</p>
   {% endif %}
 {% endblock %}
