--- a/templates/manga_detail.html
+++ b/templates/manga_detail.html
@@ -28,6 +28,30 @@
         {% if manga.description %}
           <p class="description">{{ manga.description }}</p>
         {% endif %}
+
+        {% if user %}
+          <section class="add-to-list">
+            <h3>Add to List</h3>
+            {% if user_lists %}
+              <form action="/lists/add" method="post" class="inline-form">
+                <input type="hidden" name="manga_id" value="{{ manga.id }}">
+                <select name="list_id" required>
+                  {% for l in user_lists %}
+                    <option value="{{ l.id }}">{{ l.name }}</option>
+                  {% endfor %}
+                </select>
+                <button type="submit" class="btn primary">Add</button>
+              </form>
+              <p class="small-note">
+                or <a href="/lists/new">create a new list</a>.
+              </p>
+            {% else %}
+              <p>You have no lists yet. <a href="/lists/new">Create your first list</a>.</p>
+            {% endif %}
+          </section>
+        {% else %}
+          <p><a href="/auth/login">Log in</a> to save this manga to your own lists.</p>
+        {% endif %}
       </div>
     </div>
 
